Make tmux statusline look nice in solarized.

--- a/snowblocks/tmux/tmux.conf
+++ b/snowblocks/tmux/tmux.conf
@@ -95,10 +95,11 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set-option -g status-justify "left"
   set-option -g status-left-length 500
   set-option -g status-right-length 500
+  set-option -g status-position "top"
 
   # Colors {{{
-    set -g status-bg default
-    set -g status-fg white
+    set -g status-bg '#839496'
+    set -g status-fg '#073642'
     #TODO: set -g status-attr none
   # }}}
 # }}}
@@ -132,9 +133,10 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   # }}}
 
   # Style {{{
-    set -g window-status-current-style fg='black',bg='cyan',bold
-    set -g window-status-style fg='white',bg='brightblack'
-    set -g window-status-activity-style fg='#FFFFFF',bg='#005f87',bold
+
+    set -g window-status-current-style fg='#eee8d5',bg='#073642',bold
+    set -g window-status-style fg='default',bg='#839496'
+    set -g window-status-activity-style fg='white',bg='#586e75',bold
   # }}}
 # }}}
 
