--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,7 @@ set-option -sg escape-time 0 # change the escape time in tmux to zero, improves 
 set-option -g history-limit 500000 # Increase scrollback history
 
 set -g default-terminal "tmux-256color"
-set -g default-shell /bin/zsh
+set -g default-shell /usr/local/bin/fish
 # FIXME: determine if this is needed
 # set -g default-command "reattach-to-user-namespace -l zsh" # fix terminal-notifier
 
@@ -40,7 +40,7 @@ setw -g mode-keys vi # enable vim mode
 # }}}
 
 # Edit tmux.conf in default $EDITOR
-bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
+bind e new-window -n '~/.tmux.conf' "/usr/local/bin/fish -C '\${EDITOR:-nvim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
 
 # reload tmux.conf {{{
   unbind r
