--- a/tmux.conf
+++ b/tmux.conf
@@ -133,7 +133,6 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   # }}}
 
   # Style {{{
-
     set -g window-status-current-style fg='#eee8d5',bg='#073642',bold
     set -g window-status-style fg='default',bg='#839496'
     set -g window-status-activity-style fg='white',bg='#586e75',bold
@@ -141,8 +140,8 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
 # }}}
 
 # status line {{{
-  set -g @online_icon "#[bold]  ONLINE #[nobold]"
-  set -g @offline_icon "#[bold]  OFFLINE #[nobold]"
+  set -g @online_icon " "
+  set -g @offline_icon "#[bold]#[bg=brightred]  OFFLINE#[nobold] #[bg=default]"
 
   set -g @pomodoro_duration 25
   set -g @pomodoro_show_clock 'on_stop'
@@ -158,8 +157,17 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set -g @monitor_process 'mbsync'
   set -g @mbsync_process_template "#[bold]  PROCESS_NAME #[nobold]"
 
-  set-option -g status-left "#{pomodoro_status}"
-  set-option -g status-right " #{process_indicators} #{online_status} | #{world_clock_status} "
+  set -g @monitor_process 'puma'
+  set -g @puma_process_template "#[bold] RAILS#[nobold]"
+
+  set -g @monitor_process 'postgres'
+  set -g @postgres_process_template "#[bold] PSQL#[nobold]"
+
+  set -g @monitor_process 'redis-server'
+  set -g @redis-server_process_template "#[bold] REDIS#[nobold]"
+
+  set-option -g status-left "#{pomodoro_status}#{online_status}"
+  set-option -g status-right " #{process_indicators} |#{world_clock_status}"
 # }}}
 
 # Tmux plugins {{{
@@ -174,7 +182,6 @@ set -g @plugin "christoomey/vim-tmux-navigator"
 set -g @plugin "tmux-plugins/tmux-sessionist"
 set -g @plugin "alexanderjeurissen/tmux-pomodoro"
 set -g @plugin "alexanderjeurissen/tmux-world-clock"
-# set -g @plugin "alexanderjeurissen/sombre.tmux"
 set -g @plugin "tmux-plugins/tmux-online-status"
 set -g @plugin "alexanderjeurissen/tmux-process-indicator"
 
