fix deprecation warnings tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,4 @@
 # ── General settings ──────────────────────────────────────────────────────────
-
 # Set a new keybinding to C-t {{{
   unbind C-r
   unbind C-b
@@ -11,7 +10,8 @@ set-option -sg escape-time 0 # change the escape time in tmux to zero, improves 
 set-option -g history-limit 500000 # Increase scrollback history
 
 set -g default-terminal "tmux-256color"
-set -g default-shell /usr/local/bin/fish
+set -g default-shell /bin/sh
+set -g default-command /usr/local/bin/fish
 # FIXME: determine if this is needed
 # set -g default-command "reattach-to-user-namespace -l zsh" # fix terminal-notifier
 
@@ -38,9 +38,6 @@ setw -g mode-keys vi # enable vim mode
   setw -g monitor-activity on
   set -g visual-activity on
 # }}}
-
-# Edit tmux.conf in default $EDITOR
-bind e new-window -n '~/.tmux.conf' "/usr/local/bin/fish -C '\${EDITOR:-nvim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
 
 # reload tmux.conf {{{
   unbind r
@@ -73,14 +70,11 @@ bind e new-window -n '~/.tmux.conf' "/usr/local/bin/fish -C '\${EDITOR:-nvim} ~/
 # }}}
 
 # Panes options {{{
-  set -g pane-border-bg black
-  set -g pane-active-border-bg black
+  set -g pane-border-style fg='#839496',bg='default'
+  set -g pane-active-border-style fg='#839496',bg='default'
 
-  set -g pane-border-fg black
-  set -g pane-active-border-fg brightblack
-
-  set -g display-panes-colour black
-  set -g display-panes-active-colour brightblack
+  set -g display-panes-colour default
+  set -g display-panes-active-colour yellow
 # }}}
 
 set-option remain-on-exit on # keep new-window 'terminal command' open after the command exits 0
@@ -100,16 +94,14 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   # Colors {{{
     set -g status-bg '#839496'
     set -g status-fg '#073642'
-    #TODO: set -g status-attr none
   # }}}
 # }}}
 
 
 # Messages {{{
-  set -g message-fg cyan
-  set -g message-bg brightblack
-  set -g message-command-fg cyan
-  set -g message-command-bg brightblack
+  set -g message-style fg='black',bg='yellow'
+  set -g message-command-style fg='black',bg='yellow'
+  set -g display-time 0
 # }}}
 
 
@@ -147,9 +139,6 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set -g @pomodoro_show_clock 'on_stop'
   set -g @pomodoro_fg_color 'green'
   set -g @pomodoro_bg_color 'cyan'
-  # set -g @pomodoro_filled_glyph '█'
-  # set -g @pomodoro_empty_glyph '▒'
-  # set -g @pomodoro_active_glyph '█'
 
   set -g @world_clock_tz 'Europe/Amsterdam'
   set -g @world_clock_tz 'US/Pacific'
@@ -171,29 +160,29 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
 # }}}
 
 # Tmux plugins {{{
-set -g @plugin "tmux-plugins/tpm"
-# set -g @plugin "tmux-plugins/tmux-resurrect"
-set -g @plugin "tmux-plugins/tmux-continuum"
-set -g @plugin "tmux-plugins/tmux-yank"
-set -g @plugin "tmux-plugins/tmux-copycat"
-set -g @plugin "tmux-plugins/tmux-open"
-set -g @plugin "tmux-plugins/tmux-pain-control"
-set -g @plugin "christoomey/vim-tmux-navigator"
-set -g @plugin "tmux-plugins/tmux-sessionist"
-set -g @plugin "alexanderjeurissen/tmux-pomodoro"
-set -g @plugin "alexanderjeurissen/tmux-world-clock"
-set -g @plugin "tmux-plugins/tmux-online-status"
-set -g @plugin "alexanderjeurissen/tmux-process-indicator"
+  set -g @plugin "tmux-plugins/tpm"
+  # set -g @plugin "tmux-plugins/tmux-resurrect"
+  set -g @plugin "tmux-plugins/tmux-continuum"
+  set -g @plugin "tmux-plugins/tmux-yank"
+  set -g @plugin "tmux-plugins/tmux-copycat"
+  set -g @plugin "tmux-plugins/tmux-open"
+  set -g @plugin "tmux-plugins/tmux-pain-control"
+  set -g @plugin "christoomey/vim-tmux-navigator"
+  set -g @plugin "tmux-plugins/tmux-sessionist"
+  set -g @plugin "alexanderjeurissen/tmux-pomodoro"
+  set -g @plugin "alexanderjeurissen/tmux-world-clock"
+  set -g @plugin "tmux-plugins/tmux-online-status"
+  set -g @plugin "alexanderjeurissen/tmux-process-indicator"
 
-# Check if tmux plugin manager is installed, otherwise clone it.
-if "test ! -d ~/.tmux/plugins/tpm" \
-   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+  # Check if tmux plugin manager is installed, otherwise clone it.
+  if "test ! -d ~/.tmux/plugins/tpm" \
+     "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+  # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+  run '~/.tmux/plugins/tpm/tpm'
 
-# Fixes iterm2 integration. Should go after "run '~/.tmux/plugins/tpm/tpm'"
-setw -g aggressive-resize off
-
+  # Fixes iterm2 integration. Should go after "run '~/.tmux/plugins/tpm/tpm'"
+  setw -g aggressive-resize off
 # }}}
+
 # vim: foldmethod=marker:sw=2:foldlevel=10
