Add several Coc plugins, and Treesitter config

--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -8,7 +8,8 @@
     "json",
     "javascriptreact",
     "ruby",
-    "rails"
+    "rails",
+    "rust"
   ],
   "eslint.autoFixOnSave": true,
   "eslint.filetypes": [
