--- a/config/coc/extensions/package.json
+++ b/config/coc/extensions/package.json
@@ -2,10 +2,12 @@
   "dependencies": {
     "coc-eslint": "^1.2.7",
     "coc-flow": ">=0.1.3",
+    "coc-git": ">=1.8.1",
     "coc-json": ">=1.2.6",
     "coc-lua": ">=0.1.1",
     "coc-marketplace": ">=1.7.0",
     "coc-prettier": ">=1.1.16",
+    "coc-rls": ">=1.1.6",
     "coc-solargraph": ">=1.1.6",
     "coc-sql": ">=0.2.25",
     "coc-stylelint": ">=1.1.0",
