--- a/tmux.conf
+++ b/tmux.conf
@@ -101,7 +101,7 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
 # Messages {{{
   set -g message-style fg='black',bg='yellow'
   set -g message-command-style fg='black',bg='yellow'
-  set -g display-time 0
+  set -g display-time 1
 # }}}
 
 
@@ -147,16 +147,28 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set -g @mbsync_process_template "#[bold]  PROCESS_NAME #[nobold]"
 
   set -g @monitor_process 'puma'
-  set -g @puma_process_template "#[bold] RAILS#[nobold]"
+  set -g @puma_process_template "#[bold] RB#[nobold]"
 
   set -g @monitor_process 'postgres'
-  set -g @postgres_process_template "#[bold] PSQL#[nobold]"
+  set -g @postgres_process_template "#[bold] PG#[nobold]"
 
   set -g @monitor_process 'redis-server'
-  set -g @redis-server_process_template "#[bold] REDIS#[nobold]"
+  set -g @redis-server_process_template "#[bold] RED#[nobold]"
+
+  set -g @batt_icon_charge_tier8 ''
+  set -g @batt_icon_charge_tier7 ''
+  set -g @batt_icon_charge_tier6 ''
+  set -g @batt_icon_charge_tier5 ''
+  set -g @batt_icon_charge_tier4 ''
+  set -g @batt_icon_charge_tier3 ''
+  set -g @batt_icon_charge_tier2 ''
+  set -g @batt_icon_charge_tier1 ''
+  set -g @batt_icon_status_charged ''
+  set -g @batt_icon_status_charging ''
+  set -g @batt_icon_status_discharging ''
 
   set-option -g status-left "#{pomodoro_status}#{online_status}"
-  set-option -g status-right " #{process_indicators} |#{world_clock_status}"
+  set-option -g status-right " #{process_indicators} | #{battery_icon}  | #{world_clock_status}"
 # }}}
 
 # Tmux plugins {{{
@@ -167,6 +179,7 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set -g @plugin "tmux-plugins/tmux-copycat"
   set -g @plugin "tmux-plugins/tmux-open"
   set -g @plugin "tmux-plugins/tmux-pain-control"
+  set -g @plugin 'tmux-plugins/tmux-battery'
   set -g @plugin "christoomey/vim-tmux-navigator"
   set -g @plugin "tmux-plugins/tmux-sessionist"
   set -g @plugin "alexanderjeurissen/tmux-pomodoro"
