cleanup and minify tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,8 +12,6 @@ set-option -g history-limit 500000 # Increase scrollback history
 set -g default-terminal "tmux-256color"
 set -g default-shell /bin/sh
 set -g default-command /usr/local/bin/fish
-# FIXME: determine if this is needed
-# set -g default-command "reattach-to-user-namespace -l zsh" # fix terminal-notifier
 
 # Enable true (24bit) colors for version >= 2.2
 # See https://deductivelabs.com/en/2016/03/using-true-color-vim-tmux/
@@ -90,11 +88,6 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set-option -g status-left-length 500
   set-option -g status-right-length 500
   set-option -g status-position "top"
-
-  # Colors {{{
-    set -g status-bg '#839496'
-    set -g status-fg '#073642'
-  # }}}
 # }}}
 
 
@@ -115,36 +108,24 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
 
   # Format {{{
     set -g window-status-separator " "
-    set -g window-status-format " #I:#W "
-    set -g window-status-current-format " #I:#W "
-  # }}}
-
-  # Mode (window select / session sellect) {{{
-    # set-window-option -g mode-fg '#8c799f'
-    # set-window-option -g mode-bg '#e2e0ea'
+    # set -g window-status-format " #I:#W "
+    # set -g window-status-current-format " #I:#W "
   # }}}
 
   # Style {{{
-    set -g window-status-current-style fg='#eee8d5',bg='#073642',bold
-    set -g window-status-style fg='default',bg='#839496'
-    set -g window-status-activity-style fg='white',bg='#586e75',bold
+    set -g window-status-current-style bold
+    set -g window-status-activity-style bold
   # }}}
 # }}}
 
 # status line {{{
-  set -g @online_icon " "
-  set -g @offline_icon "#[bold]#[bg=brightred]  OFFLINE#[nobold] #[bg=default]"
-
   set -g @pomodoro_duration 25
   set -g @pomodoro_show_clock 'on_stop'
-  set -g @pomodoro_fg_color 'green'
-  set -g @pomodoro_bg_color 'cyan'
+  set -g @pomodoro_fg_color 'black'
+  set -g @pomodoro_bg_color 'black'
 
   set -g @world_clock_tz 'Europe/Amsterdam'
   set -g @world_clock_tz 'US/Pacific'
-
-  set -g @monitor_process 'mbsync'
-  set -g @mbsync_process_template "#[bold]  PROCESS_NAME #[nobold]"
 
   set -g @monitor_process 'puma'
   set -g @puma_process_template "#[bold] RB#[nobold]"
@@ -155,36 +136,21 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set -g @monitor_process 'redis-server'
   set -g @redis-server_process_template "#[bold] RED#[nobold]"
 
-  set -g @batt_icon_charge_tier8 ''
-  set -g @batt_icon_charge_tier7 ''
-  set -g @batt_icon_charge_tier6 ''
-  set -g @batt_icon_charge_tier5 ''
-  set -g @batt_icon_charge_tier4 ''
-  set -g @batt_icon_charge_tier3 ''
-  set -g @batt_icon_charge_tier2 ''
-  set -g @batt_icon_charge_tier1 ''
-  set -g @batt_icon_status_charged ''
-  set -g @batt_icon_status_charging ''
-  set -g @batt_icon_status_discharging ''
-
-  set-option -g status-left "#{pomodoro_status}#{online_status}"
-  set-option -g status-right " #{process_indicators} | #{battery_icon}  | #{world_clock_status}"
+  set-option -g status-left "#{pomodoro_status}"
+  set-option -g status-right " #{process_indicators} | #{world_clock_status}"
 # }}}
 
 # Tmux plugins {{{
   set -g @plugin "tmux-plugins/tpm"
-  # set -g @plugin "tmux-plugins/tmux-resurrect"
   set -g @plugin "tmux-plugins/tmux-continuum"
   set -g @plugin "tmux-plugins/tmux-yank"
   set -g @plugin "tmux-plugins/tmux-copycat"
   set -g @plugin "tmux-plugins/tmux-open"
   set -g @plugin "tmux-plugins/tmux-pain-control"
-  set -g @plugin 'tmux-plugins/tmux-battery'
   set -g @plugin "christoomey/vim-tmux-navigator"
   set -g @plugin "tmux-plugins/tmux-sessionist"
   set -g @plugin "alexanderjeurissen/tmux-pomodoro"
   set -g @plugin "alexanderjeurissen/tmux-world-clock"
-  set -g @plugin "tmux-plugins/tmux-online-status"
   set -g @plugin "alexanderjeurissen/tmux-process-indicator"
 
   # Check if tmux plugin manager is installed, otherwise clone it.
