--- a/config/coc/extensions/package.json
+++ b/config/coc/extensions/package.json
@@ -1,19 +1,19 @@
 {
   "dependencies": {
-    "coc-eslint": "^1.2.7",
+    "coc-eslint": ">=1.3.2",
     "coc-flow": ">=0.1.3",
-    "coc-git": ">=1.8.1",
-    "coc-json": ">=1.2.6",
-    "coc-lua": ">=0.1.1",
-    "coc-marketplace": ">=1.7.0",
-    "coc-prettier": ">=1.1.16",
+    "coc-git": ">=2.0.5",
+    "coc-json": ">=1.3.2",
+    "coc-lua": ">=0.2.1",
+    "coc-marketplace": ">=1.8.0",
+    "coc-prettier": ">=1.1.18",
     "coc-rls": ">=1.1.6",
-    "coc-solargraph": ">=1.1.6",
-    "coc-sql": ">=0.2.25",
-    "coc-stylelint": ">=1.1.0",
+    "coc-solargraph": ">=1.1.8",
+    "coc-sql": ">=0.3.3",
+    "coc-stylelint": ">=1.2.0",
     "coc-svg": ">=0.0.13",
-    "coc-tsserver": ">=1.5.2",
-    "coc-vimlsp": ">=0.9.1",
-    "coc-yaml": ">=1.0.4"
+    "coc-tsserver": ">=1.6.5",
+    "coc-vimlsp": ">=0.11.0",
+    "coc-yaml": ">=1.2.0"
   }
 }
