update gpg conf

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -43,3 +43,6 @@ use-agent
 #verbose
 # Show expired subkeys
 #list-options show-unusable-subkeys
+keyserver hkp://keys.gnupg.net
+ignore-time-conflict 
+allow-freeform-uid 
