--- a/tmux.conf
+++ b/tmux.conf
@@ -10,8 +10,8 @@ set-option -sg escape-time 0 # change the escape time in tmux to zero, improves 
 set-option -g history-limit 500000 # Increase scrollback history
 
 set -g default-terminal "tmux-256color"
-set -g default-shell /bin/sh
-set -g default-command /usr/local/bin/fish
+set -g default-shell ${SHELL}
+set -g default-command ${SHELL}
 # FIXME: determine if this is needed
 # set -g default-command "reattach-to-user-namespace -l zsh" # fix terminal-notifier
 
