remove process monitors from tmux statustline

--- a/tmux.conf
+++ b/tmux.conf
@@ -129,17 +129,8 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set -g @world_clock_tz 'Europe/Amsterdam'
   set -g @world_clock_tz 'US/Pacific'
 
-  set -g @monitor_process 'puma'
-  set -g @puma_process_template "#[bold] RB#[nobold]"
-
-  set -g @monitor_process 'postgres'
-  set -g @postgres_process_template "#[bold] PG#[nobold]"
-
-  set -g @monitor_process 'redis-server'
-  set -g @redis-server_process_template "#[bold] RED#[nobold]"
-
   set-option -g status-left "#{pomodoro_status}"
-  set-option -g status-right " #{process_indicators} | #{world_clock_status}"
+  set-option -g status-right " #{world_clock_status}"
 # }}}
 
 # Tmux plugins {{{
