--- a/tmux.conf
+++ b/tmux.conf
@@ -10,10 +10,8 @@ set-option -sg escape-time 0 # change the escape time in tmux to zero, improves 
 set-option -g history-limit 500000 # Increase scrollback history
 
 set -g default-terminal "tmux-256color"
-set -g default-shell ${SHELL}
+set -g default-shell /bin/sh
 set -g default-command ${SHELL}
-# FIXME: determine if this is needed
-# set -g default-command "reattach-to-user-namespace -l zsh" # fix terminal-notifier
 
 # Enable true (24bit) colors for version >= 2.2
 # See https://deductivelabs.com/en/2016/03/using-true-color-vim-tmux/
@@ -110,8 +108,6 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
 
   # Format {{{
     set -g window-status-separator " "
-    # set -g window-status-format " #I:#W "
-    # set -g window-status-current-format " #I:#W "
   # }}}
 
   # Style {{{
@@ -123,11 +119,12 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
 # status line {{{
   set -g @pomodoro_duration 25
   set -g @pomodoro_show_clock 'on_stop'
-  set -g @pomodoro_fg_color 'black'
-  set -g @pomodoro_bg_color 'black'
+  set -g @pomodoro_fg_color 'blue'
+  set -g @pomodoro_bg_color 'blue'
 
   set -g @world_clock_tz 'Europe/Amsterdam'
-  set -g @world_clock_tz 'US/Pacific'
+  set -g @world_clock_tz 'America/New_York'
+  set -g @world_clock_tz 'America/Los_Angeles'
 
   set-option -g status-left "#{pomodoro_status}"
   set-option -g status-right " #{world_clock_status}"
