Add ido, fix tmux navigator, move some plug config to lua

--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -353,7 +353,8 @@ live_config_reload: true
 #   - ~AppKeypad
 #   - AppKeypad
 key_bindings:
-  - { key: L,         mods: Control,              action: None  }
+  # - { key: L,         mods: Control,              action: None  }
+  # - { key: L,         mods: Control,              chars: "\x14\x6c"  }
   - { key: V,   mods: Command, action: Paste                        }
   - { key: C,        mods: Command, action: Copy                         }
   - { key: Paste,                   action: Paste                        }
