--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,10 @@
   bind C-t send-prefix
 # }}}
 
+# Set a new keybinding for C-l {{{
+  bind C-l send-keys 'C-l'
+# }}}
+
 set-option -sg escape-time 0 # change the escape time in tmux to zero, improves vim responsiveness
 set-option -g history-limit 500000 # Increase scrollback history
 
