Bring kitty config up to date with current shell usage

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -473,7 +473,7 @@ color15                 #fdf6e3
 
 #: Advanced {{{
 
-shell /bin/zsh -c "(tmux attach-session || exec tmux new-session) && exit" --interactive
+shell /usr/local/bin/fish --login -C "tmux attach-session || exec tmux new-session"
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
