improve highlighting of tmux statusbar

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,17 +10,18 @@
   bind C-l send-keys 'C-l'
 # }}}
 
-set-option -sg escape-time 0 # change the escape time in tmux to zero, improves vim responsiveness
-set-option -g history-limit 500000 # Increase scrollback history
+set-option -sg escape-time 10 # change the escape time in tmux to zero, improves vim responsiveness
+set-option -g history-limit 1000 # Increase scrollback history
+# set-option -g history-limit 500000 # Increase scrollback history
 
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
 set -g default-shell /bin/sh
 set -g default-command ${SHELL}
 
 # Enable true (24bit) colors for version >= 2.2
 # See https://deductivelabs.com/en/2016/03/using-true-color-vim-tmux/
 # https://medium.com/@dubistkomisch/how-to-actually-get-italics-and-true-colour-to-work-in-iterm-tmux-vim-9ebe55ebc2be
-set -ga terminal-overrides ',tmux-256color-italic:Tc:sitm=\E[3m'
+# set -ga terminal-overrides ',tmux-256color-italic:Tc:sitm=\E[3m'
 set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 set -g base-index 1 # start with window 1 (instead of 0)
 set -g pane-base-index 1 # start with pane 1
@@ -92,6 +93,8 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set-option -g status-left-length 500
   set-option -g status-right-length 500
   set-option -g status-position "top"
+  set-option -g status-bg 'brightblack'
+  set-option -g status-fg 'brightgreen'
 # }}}
 
 
@@ -115,13 +118,13 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   # }}}
 
   # Style {{{
-    set -g window-status-current-style bold
-    set -g window-status-activity-style bold
+    set -g window-status-current-style fg='brightblue, bold'
+    set -g window-status-activity-style fg='brightyellow, italic'
   # }}}
 # }}}
 
 # status line {{{
-  set -g @pomodoro_duration 25
+  set -g @pomodoro_duration 10
   set -g @pomodoro_show_clock 'on_stop'
   set -g @pomodoro_fg_color 'blue'
   set -g @pomodoro_bg_color 'blue'
@@ -143,7 +146,7 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set -g @plugin "tmux-plugins/tmux-pain-control"
   set -g @plugin "christoomey/vim-tmux-navigator"
   set -g @plugin "tmux-plugins/tmux-sessionist"
-  set -g @plugin "alexanderjeurissen/tmux-pomodoro"
+  set -g @plugin "alexanderjeurissen/tmx-pomodoro"
   set -g @plugin "alexanderjeurissen/tmux-world-clock"
   set -g @plugin "alexanderjeurissen/tmux-process-indicator"
 
@@ -155,7 +158,7 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   run '~/.tmux/plugins/tpm/tpm'
 
   # Fixes iterm2 integration. Should go after "run '~/.tmux/plugins/tpm/tpm'"
-  setw -g aggressive-resize off
+  # setw -g aggressive-resize off
 # }}}
 
 # vim: foldmethod=marker:sw=2:foldlevel=10
